[package]
name = "try-lazy-init"
authors = ["Kyle Huey <khuey@kylehuey.com>", "Tamme Schichler <tamme@schichler.dev>"]
description = "Lazy initialization."
keywords = ["lazy", "initialization"]
license = "Apache-2.0/MIT"
repository = "https://github.com/Tamschi/try-lazy-init"
documentation = "https://docs.rs/try-lazy-init/0.4.0"
version = "0.4.0"

[dev-dependencies]
scoped-pool = "1.0.0"
